src/css/_section.css
@utility section {
    @apply flex flex-col w-full max-w-96 bg-base-200 rounded-2xl;

    /* Pseudo element mask positions base-100 squares under title corners.
     * Title is sticky, so once it hits the top of the page it will stay there
     * while .section slides underneath. Since .section and .section-header have
     * the same background color .section will be visible through transparent
     * rounded corners, making title corners look square. Positioning squares
     * with the same background color as body under the corners fixes this.
     */
    &::before {
        content: '';
        /* Stick to same spot as .section-header, same height as corners */
        @apply sticky top-16 h-4;
        /* Only fill 1rem squares on each end, not full background color */
        /* Using background color will cover other elements above SectionCol */
        /* Kinda hacky, will probably break something one day but fine now */
        border-left: 1rem solid var(--color-base-100);
        border-right: 1.5rem solid var(--color-base-100);
        /* Slight overflow to cover vertical 1px line (chromium bug) */
        width: calc(100% + 0.5rem);
        /* Allow clicking elements under transparent part */
        pointer-events: none;
        /* Prevent reserving space at the top of .section */
        margin-top: -1rem;
    }
}

@utility section-header {
    @apply flex flex-col text-center w-full min-h-[3.75rem] px-6 md:px-8;
    /* Keep title visible while scrolling contents */
    @apply sticky top-16 bg-base-200 z-50 rounded-2xl;
}

@utility section-title {
    @apply text-xl font-medium min-h-0 h-auto py-1 m-auto cursor-default;
}

@utility section-content {
    @apply min-w-0 min-h-fit px-6 md:px-8 pb-2 md:pb-4;
}

